--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,19 +3,19 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: cimg/python:3.8  # Wybierz wersję Pythona, której używasz
+      - image: cimg/python:3.8 
 
     steps:
-      - checkout  # Klonuje repozytorium
+      - checkout
       - run:
           name: "Install dependencies"
           command: |
             python -m pip install --upgrade pip
-            pip install -r requirements.txt  # Upewnij się, że masz plik requirements.txt
+            pip install -r requirements.txt
       - run:
           name: "Run unit tests"
           command: |
-            python -m unittest discover -s . -p "test_kalkulator2.py"  # Uruchamia testy jednostkowe
+            python -m unittest discover -s . -p "test_kalkulator2.py"
 
 workflows:
   version: 2
