--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,18 +3,19 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: cimg/python:3.8 
-
+      - image: circleci/python:3.8
     steps:
       - checkout
       - run:
-          name: "Install dependencies"
+          name: Install dependencies
           command: |
-            python -m pip install --upgrade pip
+            python -m venv venv
+            . venv/bin/activate
             pip install -r requirements.txt
       - run:
-          name: "Run unit tests"
+          name: Run tests from test_kalkulator2.py
           command: |
+            . venv/bin/activate
             python -m unittest discover -s . -p "test_kalkulator2.py"
 
 workflows:
