--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,9 +3,9 @@ version: 2.1
 jobs:
   test:
     docker:
-      - image: circleci/python:3.8  # Wybór obrazu Dockera z Pythona 3.8
+      - image: circleci/python:3.8
     steps:
-      - checkout  # Pobiera kod źródłowy z repozytorium
+      - checkout
       - run:
           name: Set up virtual environment
           command: |
@@ -16,7 +16,7 @@ jobs:
           name: Run tests using unittest
           command: |
             . venv/bin/activate
-            python -m unittest discover -s tests -p "*.py"  # Uruchamia testy w folderze 'tests'
+            python -m unittest discover -s . -p "*.py"
 
 workflows:
   version: 2
